--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -33,6 +33,20 @@
           Banner
         </a>
       </li> 
+
+      <li class="nav-item">
+        <a class="nav-link " href="/notification">
+          <i class="bi bi-patch-question"></i>
+          Notification
+        </a>
+      </li> 
+
+      <li class="nav-item">
+        <a class="nav-link " href="/voucher">
+          <i class="bi bi-patch-question"></i>
+          Voucher
+        </a>
+      </li> 
     
     
     </ul>
