--- a/src/views/product/newProduct.ejs
+++ b/src/views/product/newProduct.ejs
@@ -50,7 +50,7 @@
 
     <div class="col">
       <label for="brand_name">Chọn hãng sản phẩm:</label>
-      <select class="form-control"  id="brand_name" name="brand_name">
+      <select class="form-select"  id="brand_name" name="brand_name">
         <% for(let i=0; i < brand.length; i++) { %>
           <option><%= brand[i].brand %></option>
         <% } %>
