--- a/src/views/voucher/viewVoucher.ejs
+++ b/src/views/voucher/viewVoucher.ejs
@@ -1,10 +1,10 @@
 <div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">banner</h1>
+    <h1 class="h2">Voucher</h1>
     <div class="col-md-3">  
     </div>
     <div class="btn-toolbar mb-2 mb-md 0">
       <div class="btn-group me-2">
-        <a href="/banner/insert" class="btn btn-sm btn-outline-secondary">+ New Banner</a>
+        <a href="/voucher/insert" class="btn btn-sm btn-outline-secondary">+ New Voucher</a>
       </div>
     </div>
   </div>
@@ -15,35 +15,35 @@
     <table class="table table-striped table-sm">
       <thead>
         <tr>
-          <th scope="col">Keyword</th>
-          <th scope="col">Title</th>
+          <th scope="col">Value</th>
           <th scope="col">Created at</th>
+          <th scope="col">Expiration at</th>
           <th scope="col" class="text-end">Action</th>
         </tr>
       </thead>
   
       <tbody>
-        <% for (let banner of data) {%>
+        <% for (let voucher of data) {%>
           <tr class="align-middle">
-            <td><%= banner.keyword %></td>
-            <td><%= banner.title %></td>
-            <td><%= banner.time.toLocaleString('en') %></td>
+            <td><%= voucher.discount_value %></td>
+            <td><%= voucher.release_date.toLocaleString('en') %></td>
+            <td><%= voucher.expiration_date.toLocaleString('en') %></td>
             <td class="text-end">
   
               <div class="d-flex flex-row justify-content-end gap-2">
 
              
-                <a href="/banner/detail/<%= banner._id %>" type="button" class="btn btn-primary btn-small">
+                <a href="/voucher/detail/<%= voucher._id %>" type="button" class="btn btn-primary btn-small">
                   <i class="bi bi-eye"></i>
                 </a>
   
-                <a href="/banner/edit/<%= banner._id %>" type="button" class="btn btn-warning btn-small">
+                <a href="/voucher/edit/<%= voucher._id %>" type="button" class="btn btn-warning btn-small">
                   <i class="bi bi-pencil"></i>
                 </a>
                
                <div>
                     <button type="button" class="btn btn-danger btn-small" data-bs-toggle="modal"
-                    data-bs-target="#deleteModal" data-bs-id="<%=banner._id%>"> <i class="bi bi-trash"></i></button>
+                    data-bs-target="#deleteModal" data-bs-id="<%=voucher._id%>"> <i class="bi bi-trash"></i></button>
                 </div>
               </div>
             </td>
@@ -61,7 +61,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="modalLabel">Delete Banner</h1>
+                <h1 class="modal-title fs-5" id="modalLabel">Delete voucher</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -90,7 +90,7 @@
 
         var btn_del = document.getElementById('btn-delete-product')
         btn_del.onclick = function () {
-            deleteForm.action = 'banner/delete/' + id + "?_method=DELETE"
+            deleteForm.action = 'voucher/delete/' + id + "?_method=DELETE"
             deleteForm.submit()
         }
     });
