--- a/src/views/product/viewProduct.ejs
+++ b/src/views/product/viewProduct.ejs
@@ -15,6 +15,8 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
+        <th scope="col">ID</th>
+
         <th scope="col">Product's name</th>
         <th scope="col">Brand</th>
 
@@ -27,8 +29,11 @@
     </thead>
 
     <tbody>
-      <% for (let sp of data) {%>
+        <% data.forEach((sp, index) =>{ %>
         <tr class="align-middle">
+          <td>
+            <%= index+1 %>
+          </td>
           <td>
             <%= sp.product_name %>
           </td>
@@ -74,7 +79,7 @@
             </div>
           </td>
         </tr>
-        <% } %>
+        <% }) %>
     </tbody>
   </table>
 </div>
