--- a/src/views/product/detailProduct.ejs
+++ b/src/views/product/detailProduct.ejs
@@ -28,53 +28,51 @@
 
 <form action="/product/update/<%= product._id %>?_method=PUT" method="POST">
     <div class="row form-group mb-4">
+
         <div class="col">
             <label for="product_type">Chọn loại sản phẩm:</label>
-            <select id="product_type" name="product_type">
-                <option value="Điện thoại" <%=product.product_type==='Điện thoại' ? 'selected' : '' %>>Điện thoại
-                </option>
-                <option value="Phụ kiện" <%=product.product_type==='Phụ kiện' ? 'selected' : '' %>>Phụ kiện</option>
+            <select class="form-select" id="product_type_id" name="product_type_id">
+                <% for(let i=0; i < type.length; i++) { %>
+                    <option value="<%=type[i]._id%>" <%=type[i]._id==product.product_type_id ? 'selected' :'' %> >
+                        <%= type[i].name %>
+                    </option>
+                    <% } %>
             </select>
         </div>
     </div>
 
-    <div class="col">
-        <label for="firstName">Product Name</label>
-        <input type="text" class="form-control" id="product_name" name="product_name"
-            value="<%= product.product_name %>" placeholder="Product Name" required />
+    <div class="row form-group mb-4">
+
+        <div class="col">
+            <label for="product_type">Chọn hãng sản phẩm:</label>
+            <select class="form-select" id="brand_id" name="brand_id">
+                <% for(let i=0; i < brand.length; i++) { %>
+                    <option value="<%=brand[i]._id%>" <%=brand[i]._id==product.brand_id ? 'selected' :'' %> ><%=
+                            brand[i].brand %>
+                    </option>
+                    <% } %>
+            </select>
+        </div>
+    </div>
+    <div class="row form-group mb-4">
+        <div class="col">
+            <label for="firstName">Product Name</label>
+            <input type="text" class="form-control" id="product_name" name="product_name"
+                value="<%= product.product_name %>" placeholder="Product Name" required />
+        </div>
     </div>
 
 
-      <div class="col">
-        <label for="tel">Rom</label>
-        <input
-          type="text"
-          class="form-control"
-          id="rom"
-          name="rom"
-          value="<%=product.rom%>"
-          placeholder="Rom"
-          required
-        />
-      </div>
-  </div>
+    <div class="row form-group mb-4" style="padding-bottom: 10px;">
 
-  <div class="row form-group mb-4" style="padding-bottom: 10px;">
 
-    <div class="col">
+        <div class="col">
+            <label for="tel">Percent discount</label>
+            <input type="number" step="1" class="form-control" id="percent_discount" name="percent_discount"
+                value="<%=product.percent_discount%>" placeholder="Percent discount" required />
+        </div>
 
-        <label for="tel">Brand name</label>
-        <input type="text" class="form-control" id="brand_name" name="brand_name" value="<%=product.brand_name%>"
-            placeholder="Brand name" required />
-    </div>
-
-    <div class="col">
-        <label for="tel">Percent discount</label>
-        <input type="number" step="1" class="form-control" id="percent_discount" name="percent_discount"
-            value="<%=product.percent_discount%>" placeholder="Percent discount" required />
-    </div>
-
-    <input class="btn btn-primary mt-3" type="submit" value="Update">
+        <input class="btn btn-primary mt-3" type="submit" value="Update">
 
 </form>
 
