--- a/src/views/product/newVariations.ejs
+++ b/src/views/product/newVariations.ejs
@@ -47,56 +47,58 @@
     </div>
   </div>
 
-  <div class="row form-group mb-4">
-    <div class="col">
+  <% if (condition) { %>
 
-      <label for="ram">Chọn loại ram:</label>
-      <select class="form-control" id="ram" name="ram">
-        <option value="2GB">2GB</option>
-        <option value="3GB">3GB</option>
-        <option value="4GB">4GB</option>
-        <option value="6GB">6GB</option>
-        <option value="8GB">8GB</option>
-        <option value="10GB">10GB</option>
-        <option value="12GB">12GB</option>
-        <option value="16GB">16GB</option>
-      </select>
+    <div class="row form-group mb-4">
+      <div class="col">
+
+        <label for="ram">Chọn loại ram:</label>
+        <select class="form-control" id="ram" name="ram">
+          <option value="2GB">2GB</option>
+          <option value="3GB">3GB</option>
+          <option value="4GB">4GB</option>
+          <option value="6GB">6GB</option>
+          <option value="8GB">8GB</option>
+          <option value="10GB">10GB</option>
+          <option value="12GB">12GB</option>
+          <option value="16GB">16GB</option>
+        </select>
+      </div>
     </div>
-  </div>
 
 
-  <div class="row form-group mb-4">
-    <div class="col">
+    <div class="row form-group mb-4">
+      <div class="col">
 
-      <label for="rom">Chọn loại rom:</label>
-      <select class="form-control" id="rom" name="rom">
-        <option value="16GB">16GB</option>
-        <option value="32GB">32GB</option>
-        <option value="64GB">64GB</option>
-        <option value="128GB">128GB</option>
-        <option value="256GB">256GB</option>
-        <option value="512GB">512GB</option>
-        <option value="1T">1T</option>
-      </select>
+        <label for="rom">Chọn loại rom:</label>
+        <select class="form-control" id="rom" name="rom">
+          <option value="16GB">16GB</option>
+          <option value="32GB">32GB</option>
+          <option value="64GB">64GB</option>
+          <option value="128GB">128GB</option>
+          <option value="256GB">256GB</option>
+          <option value="512GB">512GB</option>
+          <option value="1T">1T</option>
+        </select>
+      </div>
     </div>
-  </div>
 
+    <% } %>
+      <div class="row form-group mb-4">
+        <div class="col">
+          <label for="quantity">Số lượng:</label>
+          <input class="form-control" type="text" id="quantity" name="quantity" required>
+        </div>
+      </div>
 
-  <div class="row form-group mb-4">
-    <div class="col">
-      <label for="quantity">Số lượng:</label>
-      <input class="form-control" type="text" id="quantity" name="quantity" required>
-    </div>
-  </div>
+      <div class="row form-group mb-4">
+        <div class="col">
+          <label for="price">Giá tiền:</label>
+          <input class="form-control" type="text" id="price" name="price" required>
+        </div>
+      </div>
 
-  <div class="row form-group mb-4">
-    <div class="col">
-      <label for="price">Giá tiền:</label>
-      <input class="form-control" type="text" id="price" name="price" required>
-    </div>
-  </div>
-
-  <div class="form-group mb-4">
-    <button type="submit" class="btn btn-primary">Thêm mới</button>
-  </div>
+      <div class="form-group mb-4">
+        <button type="submit" class="btn btn-primary">Thêm mới</button>
+      </div>
 </form>
