--- a/src/views/product/newVariations.ejs
+++ b/src/views/product/newVariations.ejs
@@ -87,14 +87,14 @@
       <div class="row form-group mb-4">
         <div class="col">
           <label for="quantity">Số lượng:</label>
-          <input class="form-control" type="text" id="quantity" name="quantity" required>
+          <input class="form-control" type="number" id="quantity" name="quantity" step="1" min="0" required>
         </div>
       </div>
 
       <div class="row form-group mb-4">
         <div class="col">
           <label for="price">Giá tiền:</label>
-          <input class="form-control" type="text" id="price" name="price" required>
+          <input class="form-control" type="number" id="price" name="price" required step="1000" min="0">
         </div>
       </div>
 
