--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -20,7 +20,7 @@
         </a>
       </li> 
       <li class="nav-item">
-        <a class="nav-link " href="/bill">
+        <a class="nav-link " href="/bill/?status=0">
           <i class="bi bi-patch-question"></i>
           Bill
         </a>
