--- a/src/views/bill/viewBill.ejs
+++ b/src/views/bill/viewBill.ejs
@@ -1,106 +1,205 @@
-<div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Bill</h1>
-    <div class="col-md-3">  
-    </div>
-    <div class="btn-toolbar mb-2 mb-md 0">
-      <div class="btn-group me-2">
-        <a href="/product/insert" class="btn btn-sm btn-outline-secondary">+ New Bill</a>
-      </div>
-    </div>
-  </div>
-  
+<div
+  class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+>
+  <h1 class="h2">Bill</h1>
+  <div class="col-md-3"></div>
+</div>
+<!-- <div class="offcanvas-body p-4 pt-0 p-lg-0">
+  <hr class="d-lg-none text-white-50">
+  <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav">
+    <li class="nav-item col-6 col-lg-auto">
+      <a class="nav-link py-2 px-0 px-lg-2" href="/docs/5.3/getting-started/introduction/" >Docs</a>
+    </li>
+    <li class="nav-item col-6 col-lg-auto">
+      <a class="nav-link py-2 px-0 px-lg-2 active" aria-current="true" href="/docs/5.3/examples/" >Examples</a>
+    </li>
+    <li class="nav-item col-6 col-lg-auto">
+      <a class="nav-link py-2 px-0 px-lg-2" href="https://icons.getbootstrap.com/" >Icons</a>
+    </li>
+    <li class="nav-item col-6 col-lg-auto">
+      <a class="nav-link py-2 px-0 px-lg-2" href="https://themes.getbootstrap.com/">Themes</a>
+    </li>
+    <li class="nav-item col-6 col-lg-auto">
+      <a class="nav-link py-2 px-0 px-lg-2" href="https://blog.getbootstrap.com/">Blog</a>
+    </li>
+  </ul>
+  </div> -->
 
-  
-  <div class="table-responsive">
-    <table class="table table-striped table-sm">
-      <thead>
-        <tr>
-          <th scope="col">User name</th>
-          <th scope="col">Amount product</th>
-          <th scope="col">Total price</th>
-          <th scope="col">Status</th>
-          <th scope="col">Created at</th>
-          <th scope="col" class="text-end">Action</th>
-        </tr>
-      </thead>
-  
-      <tbody>
-        <% for (let bill of data) {%>
-          <tr class="align-middle">
-            <td><%= bill.username %></td>
-            <td><%= bill.products.length %></td>
-            <td><%= bill.total_price %></td>
-            <td><%= bill.statusText %></td>
-            <td><%= bill.time.toLocaleString('en') %></td>
-            <td class="text-end">
-  
-              <div class="d-flex flex-row justify-content-end gap-2">
+<ul class="list-group list-group-horizontal">
+  <% if(data[0].status == 0) { %>
+  <li style="background-color: rgb(223, 221, 221)" class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=0"
+      >Unconfimred
+      <span class="badge bg-danger rounded-pill"><%= amount.length %></span></a
+    >
+  </li>
+  <li class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=1"
+      >Delivering
+      <span class="badge bg-danger rounded-pill"><%= amount2.length %></span></a
+    >
+  </li>
+  <li class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=2"
+      >Delivered</a
+    >
+  </li>
+  <%}else if(data[0].status == 1){%>
+  <li class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=0"
+      >Unconfimred
+      <span class="badge bg-danger rounded-pill"><%= amount.length %></span></a
+    >
+  </li>
+  <li style="background-color: rgb(223, 221, 221)" class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=1"
+      >Delivering
+      <span class="badge bg-danger rounded-pill"><%= amount2.length %></span></a
+    >
+  </li>
+  <li class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=2"
+      >Delivered</a
+    >
+  </li>
+  <%}else{%>
+  <li class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=0"
+      >Unconfimred
+      <span class="badge bg-danger rounded-pill"><%= amount.length %></span></a
+    >
+  </li>
+  <li class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=1"
+      >Delivering
+      <span class="badge bg-danger rounded-pill"><%= amount2.length %></span></a
+    >
+  </li>
+  <li style="background-color: rgb(223, 221, 221)" class="list-group-item">
+    <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=2"
+      >Delivered</a
+    >
+  </li>
+  <% }%>
+</ul>
 
-                <% if (bill?.status != undefined) { %> 
-                  <% if (bill?.status == 0) { %>
-                    <a href="/bill/confirmBill/<%= bill._id %>" class="btn btn-success btn-small" style="border-radius: 5px; padding-right: 12px;">
-                      <i class="bi">Confirm bill</i>
-                    </a>
-                  <% } else if (bill?.status == 1) { %>
-                    <a href="/bill/confirmBill/<%= bill._id %>" class="btn btn-success btn-small" style="border-radius: 5px; padding-right: 12px;">
-                      <i class="bi">Confirm delivery</i>
-                    </a>
-                <% }} %>
-             
-                <a href="/bill/detail/<%= bill._id %>" type="button" class="btn btn-primary btn-small">
-                  <i class="bi bi-eye"></i>
-                </a>
-  
-               <div>
-                    <button type="button" class="btn btn-danger btn-small" data-bs-toggle="modal"
-                    data-bs-target="#deleteModal" data-bs-id="<%=bill._id%>"> <i class="bi bi-trash"></i></button>
-                </div>
-              </div>
-            </td>
-          </tr>
-        <% } %>
-      </tbody>
-    </table>
-  </div>
+<div class="table-responsive">
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+        <th scope="col">User name</th>
+        <th scope="col">Amount product</th>
+        <th scope="col">Total price</th>
+        <th scope="col">Status</th>
+        <th scope="col">Created at</th>
+        <th scope="col" class="text-end">Action</th>
+      </tr>
+    </thead>
 
+    <tbody>
+      <% for (let bill of data) {%>
+      <tr class="align-middle">
+        <td><%= bill.username %></td>
+        <td><%= bill.products.length %></td>
+        <td><%= bill.total_price %></td>
+        <td><%= bill.statusText %></td>
+        <td><%= bill.time.toLocaleString('en') %></td>
+        <td class="text-end">
+          <div class="d-flex flex-row justify-content-end gap-2">
+            <% if (bill?.status != undefined) { %> <% if (bill?.status == 0) {
+            %>
+            <a
+              href="/bill/confirmBill/<%= bill._id %>"
+              class="btn btn-success btn-small"
+              style="border-radius: 5px; padding-right: 12px"
+            >
+              <i class="bi">Confirm bill</i>
+            </a>
+            <% } else if (bill?.status == 1) { %>
+            <a
+              href="/bill/confirmBill/<%= bill._id %>"
+              class="btn btn-success btn-small"
+              style="border-radius: 5px; padding-right: 12px"
+            >
+              <i class="bi">Confirm delivery</i>
+            </a>
+            <% }} %>
+
+            <a
+              href="/bill/detail/<%= bill._id %>"
+              type="button"
+              class="btn btn-primary btn-small"
+            >
+              <i class="bi bi-eye"></i>
+            </a>
+
+            <div>
+              <button
+                type="button"
+                class="btn btn-danger btn-small"
+                data-bs-toggle="modal"
+                data-bs-target="#deleteModal"
+                data-bs-id="<%=bill._id%>"
+              >
+                <i class="bi bi-trash"></i>
+              </button>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <% } %>
+    </tbody>
+  </table>
+</div>
 
 <form method="post" name="delete-product-form"></form>
 
-
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="modalLabel">Delete Product</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Confirm product deletion?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
-                <button type="button" class="btn btn-primary" id="btn-delete-product">Continue</button>
-            </div>
-        </div>
+<div
+  class="modal fade"
+  id="deleteModal"
+  tabindex="-1"
+  aria-labelledby="modalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalLabel">Delete Product</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">Confirm product deletion?</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Back
+        </button>
+        <button type="button" class="btn btn-primary" id="btn-delete-product">
+          Continue
+        </button>
+      </div>
     </div>
+  </div>
 </div>
 
-
 <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        var id_product
-        var deleteForm = document.forms['delete-product-form']
+  document.addEventListener("DOMContentLoaded", function () {
+    var id_product;
+    var deleteForm = document.forms["delete-product-form"];
 
-        const deleteModal = document.getElementById('deleteModal')
-        deleteModal.addEventListener('show.bs.modal', event => {
-            const button = event.relatedTarget;
-            id_product = button.getAttribute('data-bs-id')
-        })
-
-        var btn_del = document.getElementById('btn-delete-product')
-        btn_del.onclick = function () {
-            deleteForm.action = 'product/delete/' + id_product + "?_method=DELETE"
-            deleteForm.submit()
-        }
+    const deleteModal = document.getElementById("deleteModal");
+    deleteModal.addEventListener("show.bs.modal", (event) => {
+      const button = event.relatedTarget;
+      id_product = button.getAttribute("data-bs-id");
     });
+
+    var btn_del = document.getElementById("btn-delete-product");
+    btn_del.onclick = function () {
+      deleteForm.action = "product/delete/" + id_product + "?_method=DELETE";
+      deleteForm.submit();
+    };
+  });
 </script>
