--- a/src/views/bill/viewBill.ejs
+++ b/src/views/bill/viewBill.ejs
@@ -26,7 +26,7 @@
   </div> -->
 
 <ul class="list-group list-group-horizontal">
-  <% if(data[0].status == 0) { %>
+  <% if(req.query.status == 0 ) { %>
   <li style="background-color: rgb(223, 221, 221)" class="list-group-item">
     <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=0"
       >Unconfimred
@@ -44,7 +44,7 @@
       >Delivered</a
     >
   </li>
-  <%}else if(data[0].status == 1){%>
+  <%}else if(req.query.status == 1){%>
   <li class="list-group-item">
     <a style="text-decoration: none; padding: 10px 20px" href="/bill/?status=0"
       >Unconfimred
@@ -84,6 +84,7 @@
 </ul>
 
 <div class="table-responsive">
+  <% if(data != ''){ %>
   <table class="table table-striped table-sm">
     <thead>
       <tr>
@@ -150,6 +151,11 @@
       <% } %>
     </tbody>
   </table>
+  <% } else{%>
+    <h1 class="text-center text-secondary mt-5">
+      No data!
+    </h1>
+    <% } %>
 </div>
 
 <form method="post" name="delete-product-form"></form>
