--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="/css/main.css" />
+    <link
+    href="https://cdn.datatables.net/v/bs4/dt-1.13.6/datatables.min.css"
+    rel="stylesheet"
+  />
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   </head>
 
@@ -47,6 +51,20 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
+
+    <!-- <script  src="https://cdn.datatables.net/v/bs4/dt-1.13.6/datatables.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+          $("table").DataTable({
+            order: [0, "desc"],
+          });
+        });
+
+        $(".alert").delay(3000).slideUp(200, function() {
+           $(this).alert('close');
+        });
+      </script> -->
 
   </body>
 </html>
