--- a/src/views/bill/viewBill.ejs
+++ b/src/views/bill/viewBill.ejs
@@ -100,7 +100,7 @@
     <tbody>
       <% for (let bill of data) {%>
       <tr class="align-middle">
-        <td><%= bill.username %></td>
+        <td><%= bill.userId %></td>
         <td><%= bill.products.length %></td>
         <td><%= bill.total_price %></td>
         <td><%= bill.statusText %></td>
