--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -2,7 +2,7 @@
   <div class="position-sticky pt-3 sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link " href="/user/dashboard">
+        <a class="nav-link " href="/bill/dashboard">
           <i class="bi bi-patch-question"></i>
           Dashboard
         </a>
@@ -51,6 +51,13 @@
         <a class="nav-link " href="/voucher">
           <i class="bi bi-patch-question"></i>
           Voucher
+        </a>
+      </li> 
+
+      <li class="nav-item">
+        <a class="nav-link " href="/user/logout">
+          <i class="bi bi-patch-question"></i>
+          Logout
         </a>
       </li> 
     
